fix view on mobile

--- a/meu-site.css
+++ b/meu-site.css
@@ -56,7 +56,7 @@ nav li {
 
 .homeTitleLine{
     width: 30%;
-    height:5px;
+    height:0.3rem;
     background: #fff;
     margin: 5% auto;
     margin-bottom: 12%;
@@ -92,9 +92,10 @@ h2 {
 
 .BlackTitleLine {
     width: 10%;
-    height:0.15em;
+    height:0.2rem;
     background: #404041;
-    margin: 7% auto;
+    margin: 1rem auto;
+    margin-bottom: 6rem;
 }
 
 #profileImage {
@@ -116,7 +117,8 @@ h2 {
     width: 10%;
     height:0.15em;
     background: #fff;
-    margin: 7% auto;
+    margin: 1rem auto;
+    margin-bottom: 6rem;
 }
 
 .portPlaceHold{
@@ -164,6 +166,10 @@ footer, footer a, footer a:hover {
 
     #homeBgOpacity {
 	    height: 30rem;
+    }
+
+    #sobre p, #portfolio p{
+        font-size: 1.2rem;
     }
 
     #habilidades{
